--- a/src/components/css/HamburgerMenu.css
+++ b/src/components/css/HamburgerMenu.css
@@ -4,7 +4,7 @@
     left: -150px;
     width: 200px;
     height: 100vh;
-    background-color: black;
+    background-color: #989898;
     display: flex;
     flex-direction: column;
     justify-content: center;
