--- a/admin-page/src/components/css/HamburgerMenu.css
+++ b/admin-page/src/components/css/HamburgerMenu.css
@@ -16,6 +16,9 @@
   .hamburger-menu.open {
     left: 0;
   }
+  .hamburger-menu.hide {
+    display: none;
+  }
   
   .hamburger-menu ul {
     list-style-type: none;
