--- a/admin-page/src/components/css/HamburgerMenu.css
+++ b/admin-page/src/components/css/HamburgerMenu.css
@@ -43,4 +43,15 @@
   .hamburger-menu:hover {
     left: 0;
   }
-  
+  .kmutnb-logo {
+    width: 70px;
+    height: 70px;
+    margin-right: 90px;
+    margin-top: 10px;
+  }
+  .ece-logo {
+    width: 70px;
+    height: 70px;
+    margin-left: 50px;
+    margin-top: -65px;
+  }
