--- a/admin-page/src/components/css/Rent.css
+++ b/admin-page/src/components/css/Rent.css
@@ -1,3 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap%27');
+
+/* base styles */
+/* * {
+    margin: 0;
+    font-family: "Quicksand";
+    color: #333;
+  } */
+
 .Rent {
     max-width: 300px;
     margin:auto;
