--- a/admin-page/src/components/css/Password.css
+++ b/admin-page/src/components/css/Password.css
@@ -1,32 +1,25 @@
-@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap');
-
-/* base styles */
-* {
-  margin: 0;
-  font-family: "Quicksand";
-  color: #333;
-}
-.AddProducts {
+.Password {
     max-width: 300px;
     margin:auto;
     margin-top: 0px;
     text-align: center;
     display: flex;
 }
-.AddProducts h1{
+.Password h1{
     font-size: 30px;
     display: block;
     margin: 30px 0;
     font-weight: bold;
     position:relative;
-    right: 30px;
+    right: 0px;
 }
-.AddProducts label{
+.Password label{
+    margin-top: 80px;
     font-size: 10px;
     text-align: left;
     display: block;
 }
-.AddProducts input, .AddProducts select{
+.Password input{
     width: 200%;
     padding: 6px 10px;
     margin: 7px 0;
@@ -35,7 +28,7 @@
     box-sizing: border-box;
     display: block;
 }
-.AddProducts button {
+.Password button {
     background: #ff6004;
     color: #fff;
     border: 0;
@@ -43,5 +36,5 @@
     border-radius: 10px;
     cursor: pointer;
     position:relative;
-    right: -270px;
+    right: -200px;
 }
