--- a/admin-page/src/components/css/Rent.css
+++ b/admin-page/src/components/css/Rent.css
@@ -1,12 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap%27');
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap');
 
 /* base styles */
-/* * {
-    margin: 0;
-    font-family: "Quicksand";
-    color: #333;
-  } */
-
+* {
+  margin: 0;
+  font-family: "Quicksand";
+  color: #333;
+}
 .Rent {
     max-width: 300px;
     margin:auto;
@@ -44,5 +43,5 @@
     border-radius: 10px;
     cursor: pointer;
     position:relative;
-    right: -270px;
+    right: -200px;
 }
