--- a/admin-page/src/components/css/Home.css
+++ b/admin-page/src/components/css/Home.css
@@ -3,7 +3,7 @@
 
 
 .logo-container {
-    position: absolute;
+    position: relative;
     top: 0;
     left: 0;
 }
@@ -12,21 +12,30 @@
     height: auto; /* maintains aspect ratio */
     margin: 20px;
 }
-.App-header {
+.Home-header {
+    margin-top: 50px;
     background-color: #ffffff;
-    min-height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     font-size: calc(10px + 2vmin);
     color: rgb(0, 0, 0);
-    font-family: 'Quicksand'
+
   }
+  .Home-header h1{
+    font-family: 'Prompt', sans-serif;
+
+  }
+  .Home-header p{
+    font-family: 'Prompt', sans-serif;
+    align-items: center;
+  }
+
 
 .product-container {
     display: grid;
-    grid-template-columns: repeat(3, 300px);
+    grid-template-columns: repeat(4, 310px);
     grid-gap: 10px;
     align-items: center;
     justify-content: center;
