--- a/admin-page/src/components/css/AddAdmin.css
+++ b/admin-page/src/components/css/AddAdmin.css
@@ -41,13 +41,14 @@
   }
   
   .add-admin-container input {
-    padding: 10px;
     width: 90%;
-    border-radius: 5px;
-    margin-bottom: 20px;
-    border-color: black;
-    display: block;
+    padding: 6px 10px;
+    margin: 7px 0;
     border: 1px solid #5b5959;
+    border-radius: 10px;
+    box-sizing: border-box;
+    display: block;
+    
   }
   
   .add-admin-container button {
