--- a/admin-page/src/components/css/Password.css
+++ b/admin-page/src/components/css/Password.css
@@ -1,17 +1,38 @@
-.Password {
-    max-width: 300px;
+.Password-container {
+    
+    max-width: 470px;
     margin:auto;
-    margin-top: 0px;
+    margin-top: 270px;
+    margin-left: 43%;
+    text-align: center;
+    border-radius: 10px;
+
+}
+
+.Password {
+    
+    max-width: 100%;
+    margin:auto;
+    padding-left: 23%;
     text-align: center;
     display: flex;
+    /* border: 2px solid red; */
 }
+
+.Password-form {
+    
+    max-width: 400px;
+    margin:auto;
+    margin-top: 20px;
+    text-align: center;
+    /* border: 2px solid red; */
+}
+
 .Password h1{
     font-size: 30px;
     display: block;
-    margin: 30px 0;
     font-weight: bold;
     position:relative;
-    right: 0px;
 }
 .Password label{
     margin-top: 80px;
@@ -28,13 +49,11 @@
     box-sizing: border-box;
     display: block;
 }
-.Password button {
-    background: #ff6004;
-    color: #fff;
-    border: 0;
-    padding: 10px;
-    border-radius: 10px;
-    cursor: pointer;
-    position:relative;
-    right: -200px;
+.Password-button {
+    /* border: 2px solid red; */
+    margin-top: 40px;
+    padding-top: 20px;
+    padding-bottom: 30px;
+    padding-right: 29%;
+    
 }
