--- a/admin-page/src/components/css/AddAdmin.css
+++ b/admin-page/src/components/css/AddAdmin.css
@@ -13,16 +13,19 @@
   .add-admin-container {
     max-width: 500px;
     min-width: 300px;
-    max-height: 700px;
+    max-height: 1000px;
     width: 30%;
     height: 60%;
     margin: auto;
     margin-left: 40%;
+    
     border-radius: 25px;
-    padding-left: 1%;
+    padding-left: 2%;
+    padding-bottom: 2%;
     display: flex;
     flex-direction: column;
     text-align: center;
+    /* border: 2px solid red; */
     /* background-color: #000; */
     
   }
@@ -51,16 +54,16 @@
     
   }
   
-  .add-admin-container button {
-    margin-left: 300px;
+  .add-admin-container-button {
+    margin-left: 260px;
     padding: 10px;
-    background: #ff6004;
     color: #fff;
     width: 15%;
     border: 0;
     border-radius: 10px;
     cursor: pointer;
     align-items: center;
+    
    
   }
   
