--- a/admin-page/src/components/css/AddAdmin.css
+++ b/admin-page/src/components/css/AddAdmin.css
@@ -1,30 +1,17 @@
-/* #item-container{
-    max-width: 500px;
-    min-width: 300px;
-    max-height: 700px;
-    width: 30%;
-    height: 60%;
-    margin: 100px auto;
-    background-color: #BFBFBF;
-    border-radius: 25px;
-  } */
-
 
   .add-admin-container {
-    max-width: 500px;
-    min-width: 300px;
-    max-height: 1000px;
-    width: 30%;
-    height: 60%;
+    width: 500px;
+    /* min-width: 300px; */
+    height: 400px;
     margin: auto;
-    margin-left: 40%;
+    /* margin-left: 40%; */
     
     border-radius: 25px;
     padding-left: 2%;
     padding-bottom: 2%;
     display: flex;
     flex-direction: column;
-    text-align: center;
+    /* text-align: center; */
     /* border: 2px solid red; */
     /* background-color: #000; */
     
@@ -33,7 +20,8 @@
   
   .add-admin-container h1 {
     font-size: 30px;
-    text-align: left;
+    text-align: center;
+    
   }
 
   .add-admin-container label{
