--- a/admin-page/src/components/css/AddAdmin.css
+++ b/admin-page/src/components/css/AddAdmin.css
@@ -1,22 +1,14 @@
 
   .add-admin-container {
-    width: 500px;
-    /* min-width: 300px; */
-    height: 400px;
-    margin: auto;
-    /* margin-left: 40%; */
-    
+    max-width: 700px;
+    min-width: 500px;
+    height: 350px;
+    margin:auto;
+    margin-left: 35%;
+    text-align: center; 
+    padding-left: 2%;    
     border-radius: 25px;
-    padding-left: 2%;
-    padding-bottom: 2%;
-    display: flex;
-    flex-direction: column;
-    /* text-align: center; */
-    /* border: 2px solid red; */
-    /* background-color: #000; */
-    
   }
-
   
   .add-admin-container h1 {
     font-size: 30px;
