--- a/admin-page/src/components/css/AddAdmin.css
+++ b/admin-page/src/components/css/AddAdmin.css
@@ -2,9 +2,9 @@
   .add-admin-container {
     max-width: 700px;
     min-width: 500px;
-    height: 350px;
+    height: 420px;
     margin:auto;
-    margin-left: 35%;
+    margin-left: 42%;
     text-align: center; 
     padding-left: 2%;    
     border-radius: 25px;
@@ -47,3 +47,15 @@
    
   }
   
+  .add-admin-button {
+    background: #ff6004;
+    color: #fff;
+    border: 0;
+    padding: 10px;
+    border-radius: 10px;
+    cursor: pointer;
+    position:relative;
+    right: -160%;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
