--- a/admin-page/src/components/css/Password.css
+++ b/admin-page/src/components/css/Password.css
@@ -49,11 +49,24 @@
     box-sizing: border-box;
     display: block;
 }
-.Password-button {
+.Password-contain-button {
     /* border: 2px solid red; */
     margin-top: 40px;
     padding-top: 20px;
     padding-bottom: 30px;
     padding-right: 29%;
     
+    
+}
+
+.Password-button {
+    background: #ff6004;
+    color: #fff;
+    border: 0;
+    padding: 10px;
+    border-radius: 10px;
+    cursor: pointer;
+    position:relative;
+    right: -30%;
+
 }
