--- a/admin-page/src/components/css/Products.css
+++ b/admin-page/src/components/css/Products.css
@@ -35,7 +35,7 @@ td {
     display: flex;
     padding-left: 260px;
     padding-right: 200px;
-    /* margin-top: 100px;/ */
+    /* margin-top: 200px; */
 }
 
 
