--- a/admin-page/src/components/css/Summary.css
+++ b/admin-page/src/components/css/Summary.css
@@ -7,6 +7,7 @@
 
  tr:hover {background-color: #f5f5f5}
  
+
 table {
     border-collapse: collapse;
     width: 100%;
@@ -36,7 +37,7 @@ td {
     padding-left: 260px;
     padding-right: 200px;
     /* border: 2px solid red; */
-    margin-top: 100px;
+    /* margin-top: 100px; */
 }
 
 
@@ -98,7 +99,7 @@ td {
 
 .add_button{
     
-    background: #ff6004;
+    background: #e6651b;
     color: #fff;
     border: 0;
     padding: 10px;
@@ -108,3 +109,33 @@ td {
     margin-right: 65px;
 
 }
+
+.Show-status{
+    /* border: 2px solid red; */
+    width: 100%;
+    text-align: center;
+}
+
+.react-switch-checkbox {
+    height: 0;
+    width: 0;
+    visibility: hidden;
+  }
+  
+  .react-switch-label {
+    
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    cursor: pointer;
+    /* width: 100px;
+    height: 50px; */
+    padding-top: 7%;
+    padding-bottom: 7%;
+    
+    background: #F6B5B6;
+    border-radius: 100px;
+    position: relative;
+    transition: background-color .2s;
+    
+  }
