--- a/admin-page/src/components/css/AddAdmin.css
+++ b/admin-page/src/components/css/AddAdmin.css
@@ -13,6 +13,7 @@
   .add-admin-container h1 {
     font-size: 30px;
     text-align: center;
+    margin-right: 5%;
     
   }
 
@@ -58,4 +59,10 @@
     right: -160%;
     margin-top: 10px;
     margin-bottom: 10px;
+}
+
+.swal-modal {
+ max-width: 700px;
+ width: 32%;
+ margin-left: 15%;
 }
